Ibrahim DEV/src/objects/Parrainage__c.object
<CustomObject>
    <fields>
        <fullName>Collaborateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborateur</label>
        <referenceTo>Collaborateur__c</referenceTo>
        <relationshipLabel>Parrainages</relationshipLabel>
        <relationshipName>Parrainages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competences__c</fullName>
        <label>Competences</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Motivations__c</fullName>
        <label>Motivations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prenom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recrutement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>recrutement</label>
        <referenceTo>recrutement__c</referenceTo>
        <relationshipLabel>Parrainages</relationshipLabel>
        <relationshipName>Parrainages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parrainage</label>
    <nameField>
        <label>Parrainage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parrainages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>